# scan

./: .gitignore  16bf8e1f-549e-4a82-ae41-1143fc8249af.avif  2c43cd38-411f-428a-a0e3-4ebc0c24d942.avif  69718385-0384-4780-9b27-244ae7a7eae4.avif  7895911b-4434-4a74-a2dd-68e7108682dc.avif  8a8bffdf-76fa-4abc-8c04-6571ebb68642.avif  CLAUDE.md  README.md  ROADMAP.md  b9d14004-733f-431f-8c2a-398bc2988c47.avif  c6505473-ef46-43d7-b2ce-3cbe39487788.avif  config.yaml  dataset_builder.html  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/: image_archive_index.json
scripts/: build_card_catalog.py  build_clip_db.py  build_hash_db.py  download_card_names.py  download_card_names_fast.py  download_mtgjson.py  generate_training_data.py  train_yolo.py
src/mtg_scanner/: __init__.py  cli.py  collection.py  config.py  dataset.py  evaluation.py  image_archive.py  pipeline.py  ui.py  wishlist.py
src/mtg_scanner/detection/: __init__.py  base.py  opencv_detector.py  yolo_detector.py
src/mtg_scanner/lookup/: __init__.py  cache.py  card_catalog.py  scryfall_client.py
src/mtg_scanner/models/: __init__.py  card_patch.py  recognized_card.py  scan_result.py
src/mtg_scanner/recognition/: __init__.py  base.py  claude_recognizer.py  clip_recognizer.py  hash_recognizer.py  llm_recognizer.py  ocr_recognizer.py  paddle_recognizer.py
src/mtg_scanner/utils/: __init__.py  fuzzy_search.py  image_utils.py
tests/: conftest.py  test_detection.py  test_pipeline.py  test_recognition.py  test_scryfall.py
tests/fixtures/: README.md
